--- a/Styles/index.css
+++ b/Styles/index.css
@@ -59,6 +59,12 @@ body {
   padding: 20px;
   background-color: #E3E6F3;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+
+
 
 }
 #nav-bar{
@@ -109,6 +115,75 @@ body {
   align-items: flex-start;
   justify-content: center;
 }
+#hero h4{
+  padding-bottom: 5px;
+}
+#hero h1{
+  color:  #088178;
+}
+#hero button{
+  background-image: url('../img/button.png');
+  background-color: transparent;
+  color: #088178;
+  border: none;
+  padding: 16px 80px 16px 65px;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 15px;
+}
+#feature{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+#feature .fe-box{
+  border: 1px solid #cce7d0;
+  width: 180px;
+  text-align: center;
+  padding: 25px 15px;
+  box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
+  border-radius: 4px;
+  margin: 15px 0;
+
+}
+#feature .fe-box:hover{
+  box-shadow: 10px 10px 54px rgba(70, 63, 221, 0.1);
+  cursor: pointer;
+}
+#feature .fe-box img{
+  width: 100%;
+  margin-bottom: 10px;
+}
+#feature h6{
+  display: inline-block; /*making padding just enough long*/
+  padding:9px 8px 6px 8px;
+  line-height: 1;
+  border-radius: 4px;
+  color: #088178;
+  background-color: #fddde4;
+}
+#feature .fe-box:nth-child(2) h6{
+  background-color: #cdebbc;
+}
+#feature .fe-box:nth-child(3) h6{
+  background-color: #d1e8f2;
+}
+
+#feature .fe-box:nth-child(4) h6{
+  background-color: #cdd4f8;
+}
+
+#feature .fe-box:nth-child(5) h6{
+  background-color: #f6dbf6;
+}
+#feature .fe-box:nth-child(6) h6{
+  background-color: #fff2e5;
+}
+
+
+
 
 
 
