--- a/Styles/index.css
+++ b/Styles/index.css
@@ -166,7 +166,7 @@ button.white{
 #feature{
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content:space-between;
   flex-wrap: wrap;
 }
 #feature .fe-box{
@@ -311,7 +311,11 @@ button.white{
 #sm-banner{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+
+
+  justify-content: space-around;
+
+
   flex-wrap: wrap;
 }
 #sm-banner .banner-box{
@@ -356,7 +360,7 @@ button.white{
 #banner3{
   display: flex;
   flex-direction: row;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
   justify-content: space-between;
   padding: 0 80px;
   
