--- a/media Querry/media-mob.css
+++ b/media Querry/media-mob.css
@@ -4,7 +4,7 @@ h1{
 }
 h2{
   font-size: 32px;
-  line-height: 22px;
+  
 }
 .section-p1 {
   padding: 20px 20px;
@@ -26,23 +26,28 @@ h2{
   width: 100%;
 }
 #banner {
-  height: 30vh;
+  height: 40vh;
 }
 #banner h2 {
   font-size: 25px;
 }
-h2 {
-
- 
- 
+#banner3 {
+  padding: 0 20px;
+  flex-wrap: wrap;
+  margin-right:20px;
 }
-#banner3 h2 {
-  font-weight: 900;
-  font-size: 12px;
-}
-#banner3 h3 {
 
-  font-weight: 800;
-  font-size: 12px;
+#banner3 .banner-box {
+  min-width: 100%;
+  margin: 5px 10px;
+}
+
+
+#newsletter {
+  padding: 40px 20px;
+}
+#newsletter .form {
+  width: 100%;
+  padding: 10px 0;
 }
 }
