--- a/media Querry/media-mob.css
+++ b/media Querry/media-mob.css
@@ -80,4 +80,20 @@ h2{
 .pro-description h2 {
   font-size: 20px;
 }
+/*blog.css*/
+#blog {
+  padding: 100px 20px 0 20px;
+}
+#blog .blog-box {
+  flex-direction: column;
+  align-items: flex-start;
+}
+#blog .blog-img {
+  width: 100%;
+  margin-right: 0px;
+  margin-bottom: 30px;
+}
+#blog .blog-details {
+  width: 100%;
+}
 }
