--- a/media Querry/media-mob.css
+++ b/media Querry/media-mob.css
@@ -47,7 +47,8 @@ h2{
 
 
 #newsletter {
-  padding: 40px 20px;
+  padding: 20px 20px;
+  height: 25vh;
 }
 #newsletter .form {
   width: 100%;
@@ -95,5 +96,24 @@ h2{
 }
 #blog .blog-details {
   width: 100%;
+}
+/*about.html*/
+#about-head {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+#about-head .about-img {
+  width: 100%;
+  height: auto;
+  margin-right: 0px;
+}
+#about-head .about-details {
+  width: 100%;
+}
+#about-app .video {
+  margin: 10px auto 0 auto;
+  width: 100%;
+  height: 100%;
 }
 }
