--- a/media Querry/media-mob.css
+++ b/media Querry/media-mob.css
@@ -116,4 +116,29 @@ h2{
   width: 100%;
   height: 100%;
 }
+/* contact.html */
+#contact-details {
+  flex-direction: column;
+  align-items: flex-start;
+}
+#contact-details .details {
+  width: 100%
+}
+#contact-details .details h2 {
+  margin: 20px 0;
+  font-size: 20px;
+  line-height: 1.5rem;
+}
+#contact-details .map {
+  width: 100%;
+  height: 400px;
+  margin: 20px 0px;
+}
+#form-details form h1 {
+  margin: 10px 0;
+  font-size: 20px;
+}
+#form-details form input, #form-details form textarea {
+  width: 100%;
+}
 }
