--- a/media Querry/media-tab.css
+++ b/media Querry/media-tab.css
@@ -111,5 +111,20 @@ width: 70%;
 #blog {
   padding: 150px 100px 0 100px;
 }
-
+/* contact.html */
+#form-details {
+  flex-direction: column;
+  margin: 30px;
+  padding: 20px;
+}
+#form-details form {
+  width: 100%;
+}
+#form-details .people {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 40px;
+}
 }
