--- a/media Querry/media-tab.css
+++ b/media Querry/media-tab.css
@@ -1,11 +1,9 @@
 @media  only screen and (max-width:799px) {
   body {
-    padding-top: 0px; /* Adjust this value based on the height of your navigation bar */
-    margin-top: 0;
+    padding-top: 70px; /* Adjust this value based on the height of your navigation bar */
   }
   #header {  
-    padding: 18px;
-   
+    padding: 18px; 
 }
 
   /* sidebar */
@@ -95,14 +93,12 @@
 #banner3 .banner-box {
   min-width: 28%;
   margin: 0px 10px;
-
 }
 #newsletter .form {
 width: 70%;
 }
+
 /* sproduct.html */
-
-
  #single-pro-detail .images-sec {
   margin-right: 0rem;
 }
@@ -126,5 +122,27 @@ width: 70%;
   flex-wrap: wrap;
   justify-content: space-between;
   margin-top: 40px;
+}
+/*cart.html*/
+#cart table thead td{
+  font-weight: 700;
+  font-size: 13px;}
+  #cart table tbody td{
+    font-size: 13px;
+  }
+#bill {
+  flex-direction: column;
+  margin: 30px;
+}
+#bill .coupon {
+  width: 100%;
+  margin-bottom: 30px;
+ 
+}
+#bill .total {
+  width: 100%;
+}
+#bill .coupon input {
+  width: 60%;
 }
 }
